aws-terraform/k8s/kubernetes-ingress/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covid19-ingress-external-dns
  labels:
    app: covid19
  annotations:
    # Ingress core settings
    kubernetes.io/ingress.class: "alb" 
    # or
    kubernetes.io/ingress.class: "nlb" 

    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress-group

    alb.ingress.kubernetes.io/scheme: internet-facing
    # or
    alb.ingress.kubernetes.io/scheme: internal

    alb.ingress.kubernetes.io/target-type: ip 
    # or
    alb.ingress.kubernetes.io/target-type: instance

    # HealthCheck
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-path: '/login'
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    # or 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

    ## SSL
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:788210522308:certificate/c3eebb6d-52d1-47d2-88f9-032c8fa3652a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'

    # DNS settings
    external-dns.alpha.kubernetes.io/hostname: dev.devopseasylearning.net

    # Ingress Groups
    alb.ingress.kubernetes.io/group.name: apps-ingress-group
    alb.ingress.kubernetes.io/group.order: '20'

spec:
  defaultBackend:
    service:
      name: articles-nodeport-service
      port:
        number: 80

spec:
  defaultBackend:
    service:
      name: articles-nodeport-service
      port:
        number: 80
  tls:
  - hosts:
    - "*.devopseasylearning.net"

spec:
  rules:  
    - http:
        paths:
          - path: /covid19
            pathType: Prefix
            backend:
              service:
                name: covid19-nodeport-service
                port: 
                  number: 80

spec:
  rules: 
    - host: creative.devopseasylearning.net 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: creative-nodeport-service
                port: 
                  number: 80
